<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:title="@string/pref_location_label"
        android:key="@string/pref_location_key"
        android:defaultValue="@string/pref_location_default"
        android:inputType="text"
        android:singleLine="true" />

    <ListPreference
        android:key="@string/pref_temperature_units_key"
        android:title="@string/pref_temperature_units_label"
        android:entries="@array/TemperatureUnits"
        android:entryValues="@array/TemperatureValues"
        android:defaultValue="@string/pref_temperature_default"/>

    <EditTextPreference
        android:title="@string/pref_lat_label"
        android:key="@string/pref_lat_key"
        android:defaultValue="@string/pref_lat_default"
        android:inputType="number"
        android:singleLine="true" />

    <EditTextPreference
        android:title="@string/pref_lon_label"
        android:key="@string/pref_lon_key"
        android:defaultValue="@string/pref_lon_default"
        android:inputType="number"
        android:singleLine="true" />

</PreferenceScreen>